# community

./: .dockerignore  .gitignore  GETTING_STARTED.md  README.md  compose.yaml  rabbitmq.conf
.cursor/rules/: community-overview.mdc
.github/: copilot-instructions.md
.trae/rules/: project_rules.md
agent/: .dockerignore  Dockerfile  README.md  build_protos.sh  generate_grpc.py  pyproject.toml  run.sh
agent/protos/: agent_registration_service.proto
agent/src/: agent.py  agent_config.py  agent_init.py  command_handler.py  config.py  decorators.py  example_agent.py  grpc_client.py  llm_client.py  message_queue_handler.py  messaging.py  processing.py  server_manager.py  state.py
backend/: README.md  app.py  pyproject.toml  test_api.py  test_message.py
backend/app/: main.py
backend/app/api/: rest.py  websocket.py
backend/app/core/: agent_manager.py  instances.py  models.py  server.py
backend/app/core/agents/: analyst.py  base.py  broker.py  config.py  default.py  human.py  system.py
backend/app/docs/: agent_responsibilities.md
backend/app/test/: test_agent_manager.py  test_analyst_agent.py  test_ollama_client.py
backend/app/utils/: id_generator.py  logger.py  message_utils.py  model_client.py  ollama.py
backend/examples/: test_message.py
backend/src/: agent.py  app.py  communication.py  community.py  llm_interface.py  message.py  population.py  test_agents.py
broker/: .dockerignore  Dockerfile  README.md  generate_grpc.py  pyproject.toml  run.sh
broker/src/: agent_status_service_pb2_grpc.py  broker.py  broker_config.py  decorators.py  grpc_client.py  message_queue_handler.py  server_manager.py  state.py
broker/src/protos/: agent_status_service.proto
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  webpack.config.js
frontend/.docker/: config.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  config.ts  index.css  styles.css
frontend/src/components/: AgentCard.js  AgentCard.tsx  AgentCreationForm.tsx  AgentDashboard.js  AgentDashboard.tsx  AgentList.tsx  AgentPanel.tsx  AgentQueues.js  AgentStatus.tsx  Chat.tsx  ChatUI.tsx  Header.js  MessageFlow.js  MessageHistory.js  MessageInput.tsx  MessageList.tsx  QueueChart.js  StatusDistribution.js
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: agentStore.js  agentStore.ts  messageStore.ts
frontend/src/theme/: matrixTheme.ts
frontend/src/types/: WebSocketMessage.ts  agent.ts  message.ts  messages.ts  types.d.ts
frontend/src/utils/: agentUtils.ts  idGenerator.ts  messageReplyUtils.ts  messageStoreMigration.ts
mock_server/: README.md  __init__.py  main.py  pyproject.toml
scripts/: debug_agent_status.py
server/: .dockerignore  Dockerfile  README.md  build_protos.sh  generate_grpc.py  pyproject.toml  run.sh
server/server/: server.py
server/src/: agent_manager.py  agent_registration_service.py  agent_status_service.py  broker_registration_service.py  config.py  decorators.py  grpc_server_setup.py  grpc_servicers.py  grpc_services.py  main.py  message_queue_handler.py  models.py  rabbitmq_utils.py  server.py  services.py  state.py  utils.py  websocket_handler.py
server/src/grpc_handlers/: __init__.py  grpc_config.py  grpc_server_setup.py  grpc_servicers.py
server/src/grpc_server/: grpc_config.py  grpc_server_setup.py
server/src/grpc_services/: agent_registration_service.py  agent_status_service.py  broker_registration_service.py
server/src/protos/: agent_status_service.proto
shared/protos/: agent_registration_service.proto  agent_status_service.proto  broker_registration_service.proto
shared_models/: README.md  __init__.py  pyproject.toml  shared_models.py
shared_models/shared_models/: __init__.py  shared_models.py
ui/: client.js  client.ts  index.html
