[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "joe.fox",email = "j.oefox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared-models @ file:///mnt/c/Users/joefo/community/shared_models",
    "pika (>=1.3.2,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
