[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "joe.fox",email = "j.oefox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "mistralai (>=1.6.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "shared-models @ file:///mnt/c/Users/joefo/community/shared_models",
    "protobuf (>=5.26.1,<6.0.0)",
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
]

[tool.poetry] 
packages = [
    {include = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
shared-models = {develop = true}
