[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["joe.fox <j.oefox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
flask-socketio = "^5.1.1"
flask-cors = "^3.0.10"
python-engineio = "^4.2.1"
python-socketio = "^5.4.0"
aioconsole = "^0.3.3"
eventlet = "^0.39.0"
requests = "^2.32.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
