[tool.poetry]
name = "community-flow"
version = "0.1.0"
description = "Real-time message flow visualization system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
websockets = "^12.0"
python-multipart = "^0.0.6"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
