[tool.poetry]
name = "agent-community-backend"
version = "0.1.0"
description = "Backend for the agent community system"
authors = ["joe.fox <j.oefox@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
uvloop = "^0.19.0"
websockets = "^12.0"
pydantic = "^2.5.3"
python-dotenv = "^1.0.0"
colorama = "^0.4.6"
aiohttp = "^3.9.1"
structlog = "^24.1.0"
httptools = "^0.6.1"
slowapi = "^0.1.9"
ollama = "^0.4.7"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
