[project]
name = "broker"
version = "0.1.0"
description = ""
authors = [
    {name = "joe.fox",email = "j.oefox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "shared-models @ file:///mnt/c/Users/joefo/community/shared_models",
]

[tool.poetry] 
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
shared-models = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
