[tool.poetry]
name = "server"
version = "0.1.0"
description = "Agent Communication Server"
authors = [
    "joefox@gmail.com"
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.115.12"
websockets = "^15.0.1"
uvicorn = "^0.34.0"
pika = "^1.3.2"
protobuf = "^5.26.1"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


