[project]
name = "shared-models"
version = "0.1.2"
description = "Shared models for the community project"
authors = [
    {name = "joe.fox", email = "j.oefox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [
    {include = "shared_models"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

